# drone-server

./: README.md
client/: CMakeLists.txt  info.ini  main.cpp
client/ini_handler/: ini_handler.hpp
receiver/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp
server/communication/: log_handler.hpp
